apps/base/signalboard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: signalboard
  labels:
    app.kubernetes.io/part-of: lab-to-interview
    app.kubernetes.io/name: signalboard
    lab-to-interview.io/environment: development
