apps/base/signalboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalboard
  namespace: signalboard
  labels:
    app.kubernetes.io/name: signalboard
    app.kubernetes.io/part-of: lab-to-interview
    app.kubernetes.io/component: web
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: signalboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: signalboard
        app.kubernetes.io/part-of: lab-to-interview
        app.kubernetes.io/component: web
    spec:
      serviceAccountName: signalboard
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: signalboard
          image: signalboard:0.1.0-dev
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          startupProbe:
            httpGet:
              path: /health/live
              port: http
            periodSeconds: 2
            failureThreshold: 15
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
